--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,3 +15,9 @@ body {
 	font-family: 'MontserratRegular';
 	src: url('./assets/fonts/Montserrat-Regular.ttf');
 }
+
+.router-comp-fit {
+    flex: 1;
+	display: flex;
+	flex-direction: column;
+};
