--- a/src/app/views/channel/channel.component.html
+++ b/src/app/views/channel/channel.component.html
@@ -1,3 +1,3 @@
 <div class="chan-base" (scroll)="onScroll($event)" >
-    <div style="padding-bottom:1600px;">lol</div>
+    <view-list [contents]="contents"></view-list>
 </div>
