--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,49 @@
-/* You can add global styles to this file, and also import other style files */
+@import "./globals/style.scss";
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
+
+
+$black-87-opacity: rgba(black, 0.87);
+$white-87-opacity: rgba(white, 0.87);
+$mat-pixi-primary: (
+    50: $pixi-second-color,
+    100: $pixi-second-color,
+    200: $pixi-second-color,
+    300: $pixi-second-color,
+    400: $pixi-second-color,
+    500: $pixi-second-color,
+    600: $pixi-second-color,
+    700: $pixi-second-color,
+    800: $pixi-second-color,
+    900: $pixi-second-color,
+    A100: $pixi-second-color,
+    A200: $pixi-second-color,
+    A400: $pixi-second-color,
+    A700: $pixi-second-color,
+    contrast: (
+      50: $pixi-second-color,
+      100: $pixi-second-color,
+      200: $pixi-second-color,
+      300: $pixi-second-color,
+      400: $pixi-second-color,
+      500: white,
+      600: white,
+      700: white,
+      800: $white-87-opacity,
+      900: $white-87-opacity,
+      A100: $black-87-opacity,
+      A200: white,
+      A400: white,
+      A700: white,
+    )
+);
+
+@import '~@angular/material/theming';
+@include mat-core();
+$primary: mat-palette($mat-pixi-primary);
+$accent:  mat-palette($mat-pixi-primary, A200, A100, A400);
+$warn:    mat-palette($mat-pixi-primary);
+$theme: mat-light-theme($primary, $accent, $warn);
+@include angular-material-theme($theme);
 
 body {
 	margin: 0px;
