--- a/src/app/views/about/about.component.html
+++ b/src/app/views/about/about.component.html
@@ -7,7 +7,7 @@
 
             <span style="display: block;">
                 <p>
-                    <span class="about-title-pixi">Pixi</span> is social network oriented to multimedia consumption submitted by the user and general discussion.
+                    <span class="about-title-pixi">Pixi</span> is social network oriented to multimedia consumption submitted by the user, and general discussion.
                     <span class="about-title-pixi">Pixi</span> was created by <a target="_blank" href="https://www.linkedin.com/in/italo-russo/">Italo Russo</a>.
                     On <span class="about-title-pixi">Pixi</span>, "Personas" are the first-class citizens. A Persona can post, vote, comment and create channels.
                 </p>
@@ -15,35 +15,33 @@
            
             <span style="display: block;">
                 <p>
-                    User accounts can have one or multiple Personas. Channels are managed by their respective Persona (mods).
+                    User accounts may have one or multiple Personas. Channels are managed by their respective Persona (mods).
                     They establish rules and are in their power to ban any Persona who doesn't comply with them. 
                 </p>
                 <p>                
-                    A Mod Persona on a channel can ban another Persona and its user account, so no other Persona from that account can post, but the Mod Persona cannot see the owner
-                    of the Persona or its other Personas. This ensures strict anonymity with everyone, including staff members.
+                    A Mod Persona of a channel has the power to ban another Persona and its user account, so no other Persona from that account will be able to post,
+                    but the Mod Persona cannot see the account owner of that Persona or its other Personas. This ensures strict anonymity with everyone, including from staff members.
                 </p>                
                 <p>                
                     <span class="about-title-pixi">Pixi</span> is built around <span style="font-weight:bold;">Freedom of Speech</span>. Our utmost important value is to
-                    protect your voice. We try our best to ensure your ideas will be shown and heard.
+                    protect the user's voice. We try our best to ensure your ideas will be shown and heard.
                 </p>  
                 <p>                
                     However, to ensure the wellbeing of the whole community and harmony between channels and users, we shall enforce a short but strict list of rules, known as the 
-                    Global Rules.
+                    <span style="font-weight:bold;">Global Rules</span>.
                 </p>                               
             </span>   
 
             <span style="display: block; text-align: left">
                 <span style="font-weight:bold;">Global Rules</span>
                 <ol>
-                    <li><span style="font-weight:bold;">NSFW</span> content <span style="font-weight:bold;">MUST</span>
-                        always be marked as such.</li>
-                    <li>
-                        <span style="font-weight:bold;">NSFW</span> channels (Porn, morbid curiosity, triggering stuff) <span style="font-weight:bold;">MUST</span>
+                    <li><span style="font-weight:bold;">NSFW</span> content <span style="font-weight:bold;">MUST</span> always be marked as such.</li>
+                    <li><span style="font-weight:bold;">NSFW</span> channels (Porn, morbid curiosity, triggering stuff) <span style="font-weight:bold;">MUST</span>
                         always be marked as such.
                     </li>
                     <li>No child pornography, or any other banned content according to the U.S. Law for that matter.</li>
                     <li>Content <span style="font-weight:bold;">MUST</span> always be relevant to the topic of the channel.</li>
-                    <li>Ban avoidance *will* result in a permanent ban of any account.</li>
+                    <li>Ban avoidance <span style="font-weight:bold;">WILL</span> result in a permanent ban of any account.</li>
                     <li>Staff impersonation is strictly forbidden.</li>        
                     <li>We encourage our users to deliver good/high quality content. This is quite subjective, therefore we do not enforce it. Just something
                         to be aware of.
@@ -62,13 +60,13 @@
                 <span style="font-weight:bold;">Some Technical Policies</span>
                 <p>                
                     <span class="about-title-pixi">Pixi</span> allows for images and videos uploads with certain limitations. Images are restricted to PNG, JPG, BMP and GIF of up to
-                    10 megabytes. Videos on the other hand are restricted to WEBM and MP4 of up to also 10 megabytes but 4 minutes time limit, too. A post is limited to 10 images
-                    or 5 videos. A post can consist of images and videos, you must have image a video is equivalent to 2 images. This means a post can have 2 videos and 5 images, or
-                    3 videos and 4 images, and so on.
+                    10 megabytes(10737418240 bytes) per image. Videos, on the other hand, are restricted to WEBM and MP4 of up to 10 megabytes(10737418240 bytes) and 6 minutes time limitation per video.
+                    A post is limited to 10 images or 5 videos. A post may consist of images and videos, where a video is equivalent to 2 images. This means a post may consist 2 videos and 6 images, or
+                    4 videos and 2 images, and so on.
                 </p>
                 <p>
-                    Channels can be set up so only a specific type of content is allowed. For example, a channel can disable audio on its videos. A video uploaded to this kind of 
-                    channel will be stripped off of its audio completely. 
+                    Channels may be setup so only a specific type of content is allowed. For example, a channel may have audio disabled on its videos. A video uploaded to this kind of 
+                    channel will be stripped off of its audio completely. Another example would be a channel where only images are allowed to be uploaded.
                 </p>
             </span>             
 
