--- a/src/globals/style.scss
+++ b/src/globals/style.scss
@@ -3,9 +3,9 @@ $pixi-title-color: #ffd467;
 $pixi-second-color: #df3934;
 $pixi-third-color: #3936f7;
 $pixi-fourth-color: #1cd158;
-$pixi-fith-color: #F5F5F5;
+$pixi-fith-color: #F5F5F5; // dialogs and context block
 $pixi-text-color: #fff;
-$pixi-topbar-gheight: 55px;
+$pixi-topbar-gheight: 2rem;
 
 .blue-button {
     background-color: $pixi-third-color !important;
