--- a/src/app/topbar/topbar.component.scss
+++ b/src/app/topbar/topbar.component.scss
@@ -6,6 +6,10 @@
 	width: 100%;
 	height: $pixi-topbar-gheight;
 	background-color: $pixi-base-color;
+	box-shadow: 0px 1px 1px 1px $pixi-base-color;
+	// box-shadow: 0px -10px 10px -10px #000 inset;
+	z-index: 2;
+	position: relative;
 }
 
 .tb-base-subdiv {
@@ -19,4 +23,42 @@
 	color: $pixi-second-color;
 	line-height: $pixi-topbar-gheight;
 	font-size: 2.1em;    
+}
+
+.tb-base-button {
+    @extend .pixi-base-color-button;
+    line-height: $pixi-topbar-gheight;
+    text-align: center;
+    color: white;
+    display: inline-block;
+    width: $pixi-topbar-gheight;
+    height: $pixi-topbar-gheight;
+	cursor: pointer;
+}
+
+.tb-base-user-button {
+	@extend .pixi-base-color-button;
+    line-height: $pixi-topbar-gheight;
+    text-align: center;
+    color: white;
+	display: inline-block;
+	padding-left: 8px;
+	padding-right: 8px;
+    height: $pixi-topbar-gheight;
+	cursor: pointer;
+}
+
+.tb-base-middle-channel {
+	display: flex;
+	width: 100%;
+	height: 100%;
+}
+
+.tb-base-middle-center {
+	display: inline-block;
+}
+
+.tb-base-space-filler {
+	display: inline-block;
+	flex: 1;
 }
