--- a/src/styles.scss
+++ b/src/styles.scss
@@ -63,6 +63,7 @@ body {
 
 .router-comp-fit {
     flex: 1;
-	display: flex;
-	flex-direction: column;
+	  display: flex;
+    flex-direction: column;
+    height: 100%;
 };
