--- a/src/app/app/app.component.html
+++ b/src/app/app/app.component.html
@@ -1,5 +1,7 @@
     
 <div class="base">
-	<topbar-component></topbar-component>
-    <router-outlet></router-outlet>
+    <topbar-component></topbar-component>
+    <div (scroll)="onScroll($event)" class="inner">
+        <router-outlet></router-outlet>        
+    </div>
 </div>
