--- a/src/app/views/about/about.component.scss
+++ b/src/app/views/about/about.component.scss
@@ -2,9 +2,9 @@
 
 
 .about-base {
-	display: block;	
-	width: 100%;
-	overflow: auto;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
 }
 
 .about-top {
