--- a/src/app/views/channel/channel.component.html
+++ b/src/app/views/channel/channel.component.html
@@ -1,4 +1,4 @@
-<div class="chan-base" (scroll)="onScroll($event)">
+<div class="chan-base">
     <view-list *ngIf="listView" [contents]="contents"></view-list>
     <view-grid *ngIf="!listView" [contents]="contents"></view-grid>
 </div>
