--- a/src/app/app/app.component.scss
+++ b/src/app/app/app.component.scss
@@ -1,8 +1,17 @@
 
     
 .base {
-	display: block;
-	overflow: hidden;
+	display: flex;
+	flex-direction: column;
 	width: 100%;
-	height: 100vh;
+	height: 100%;
+	overflow: hidden;
+}
+
+.inner {
+	overflow-y: scroll;
+	overflow-x: hidden;
+	display: block;
+	width: 100%;
+	flex: 1;
 }
