--- a/src/app/views/about/about.component.html
+++ b/src/app/views/about/about.component.html
@@ -7,27 +7,23 @@
 
             <span style="display: block;">
                 <p>
-                    <span class="about-title-pixi">Pixi</span> is social network oriented to multimedia consumption submitted by the user, and general discussion.
-                    <span class="about-title-pixi">Pixi</span> was created by <a target="_blank" href="https://www.linkedin.com/in/italo-russo/">Italo Russo</a>.
-                    On <span class="about-title-pixi">Pixi</span>, "Personas" are the first-class citizens. A Persona can post, vote, comment and create channels.
+                    <span class="about-title-pixi">Pixi</span> is mix of social network and discussion forum with anonymity in mind. It's mainly oriented to multimedia consumption, 
+                    but it's very well equipped for commenting and sharing ideas. "Personas" are the first-class citizen. A Persona can post, vote, comment and create/manage channels.
                 </p>
             </span>
            
             <span style="display: block;">
                 <p>
-                    User accounts may have one or multiple Personas. Channels are managed by their respective Persona (mods).
-                    They establish rules and are in their power to ban any Persona who doesn't comply with them. 
+                    User accounts may have one or multiple Personas. Channels are managed by their respective Mod Personas.
+                    They establish rules and are in their power to enforce them. 
                 </p>
                 <p>                
-                    A Mod Persona of a channel has the power to ban another Persona and its user account, so no other Persona from that account will be able to post,
-                    but the Mod Persona cannot see the account owner of that Persona or its other Personas. This ensures strict anonymity with everyone, including from staff members.
+                    For example, a Mod Persona of a channel is able to ban another Persona and its user account, so no other Persona from that account will be able to post,
+                    but the Mod Persona cannot see the account owner of the banned Persona or its other Personas. This ensures strict anonymity with everyone, including from staff members.
                 </p>                
                 <p>                
-                    <span class="about-title-pixi">Pixi</span> is built around <span style="font-weight:bold;">Freedom of Speech</span>. Our utmost important value is to
-                    protect the user's voice. We try our best to ensure your ideas will be shown and heard.
-                </p>  
-                <p>                
-                    However, to ensure the wellbeing of the whole community and harmony between channels and users, we shall enforce a short but strict list of rules, known as the 
+                    <span class="about-title-pixi">Pixi</span>'s most important value is <span style="font-weight:bold;">Freedom of Speech</span>. However, to ensure the wellbeing of
+                    the whole community and harmony between users, we shall enforce a short but strict list of rules, known as the 
                     <span style="font-weight:bold;">Global Rules</span>.
                 </p>                               
             </span>   
@@ -35,25 +31,31 @@
             <span style="display: block; text-align: left">
                 <span style="font-weight:bold;">Global Rules</span>
                 <ol>
+                    <li>
+                        <span style="font-weight:bold;">SPAMMING</span> is not allowed.
+                    </li>                    
                     <li><span style="font-weight:bold;">NSFW</span> content <span style="font-weight:bold;">MUST</span> always be marked as such.</li>
-                    <li><span style="font-weight:bold;">NSFW</span> channels (Porn, morbid curiosity, triggering stuff) <span style="font-weight:bold;">MUST</span>
+                    <li><span style="font-weight:bold;">NSFW</span> channels (porn, morbid or triggering content) <span style="font-weight:bold;">MUST</span>
                         always be marked as such.
                     </li>
                     <li>No child pornography, or any other banned content according to the U.S. Law for that matter.</li>
                     <li>Content <span style="font-weight:bold;">MUST</span> always be relevant to the topic of the channel.</li>
                     <li>Ban avoidance <span style="font-weight:bold;">WILL</span> result in a permanent ban of any account.</li>
-                    <li>Staff impersonation is strictly forbidden.</li>        
-                    <li>We encourage our users to deliver good/high quality content. This is quite subjective, therefore we do not enforce it. Just something
-                        to be aware of.
+                    <li>Staff impersonation is strictly forbidden.</li>     
+                    <li>
+                        Someone saying mean things to a user is <span style="font-weight:bold;">NOT</span> a bannable offense. This will fall under mods discretion, of course, but Free Speech still
+                        is the most important value in this website. Unless it is downright <span style="font-weight:bold;">SPAM</span>, insulting or "hate speech" are not bannable offenses.
+                    </li>   
+                    <li>Lastly but not least, we very much encourage our users to deliver good/high quality content.
                     </li>        
                 </ol>
             </span>      
             
             <span style="display: block; text-align: left">
-                    <p>
-                        Global Rules apply to all channels. Violation of some of these rules may result in a permanent
-                        ban for the user or Persona, and/or content deletion.
-                    </p>
+                <p>
+                    Global Rules apply to all channels. Violation of some of these rules may result in a permanent
+                    ban for the user or Persona, and/or content deletion.
+                </p>
             </span> 
 
             <span style="display: block">
@@ -67,6 +69,9 @@
                 <p>
                     Channels may be setup so only a specific type of content is allowed. For example, a channel may have audio disabled on its videos. A video uploaded to this kind of 
                     channel will be stripped off of its audio completely. Another example would be a channel where only images are allowed to be uploaded.
+                </p>
+                <p>
+                    Any video or image uploaded will automatically be completely stripped off of its metadata to protect user's anonymity.
                 </p>
             </span>             
 
