--- a/src/app/topbar/topbar.component.html
+++ b/src/app/topbar/topbar.component.html
@@ -33,6 +33,9 @@
                 <span (click)="onNotifications()" class="tb-base-button" matTooltipPosition="below" matTooltip="Notifications">
                     <i class="fa fa-bell" aria-hidden="true"></i>
                 </span>
+                <span (click)="onMenu()" class="tb-base-button" matTooltipPosition="below" matTooltip="Menu">
+                    <i class="fa fa-bars" aria-hidden="true"></i>
+                </span>
                 <span (click)="onUser()" class="tb-base-user-button" matTooltipPosition="below" matTooltip="Log in">
                     <i class="fa fa-user" aria-hidden="true"></i> pepper
                 </span>  
