--- a/src/app/views/about/about.component.html
+++ b/src/app/views/about/about.component.html
@@ -12,7 +12,7 @@
                 </p>
             </span>
            
-            <span style="display: block;">
+            <span style="display: block; margin: 15px 0px 15px 0px;">
                 <p>
                     User accounts may have one or multiple Personas. Channels are managed by their respective Mod Personas.
                     They establish rules and are in their power to enforce them. 
@@ -28,8 +28,8 @@
                 </p>                               
             </span>   
 
-            <span style="display: block; text-align: left">
-                <span style="font-weight:bold;">Global Rules</span>
+            <span style="display: block; text-align: left; margin: 15px 50px 15px 50px;">
+                <span style="font-weight:bold; display: block; margin-bottom: 5px;">Global Rules</span>
                 <ol>
                     <li>
                         <span style="font-weight:bold;">SPAMMING</span> is not allowed.
@@ -51,15 +51,15 @@
                 </ol>
             </span>      
             
-            <span style="display: block; text-align: left">
+            <span style="display: block; text-align: left; margin: 15px 0px 15px 0px;">
                 <p>
                     Global Rules apply to all channels. Violation of some of these rules may result in a permanent
                     ban for the user or Persona, and/or content deletion.
                 </p>
             </span> 
 
-            <span style="display: block">
-                <span style="font-weight:bold;">Some Technical Policies</span>
+            <span style="display: block; text-align: left; margin: 15px 0px 15px 0px;">
+                <span style="display: block; font-weight:bold; margin-bottom: 5px;">Some Technical Policies</span>
                 <p>                
                     <span class="about-title-pixi">Pixi</span> allows for images and videos uploads with certain limitations. Images are restricted to PNG, JPG, BMP and GIF of up to
                     10 megabytes(10737418240 bytes) per image. Videos, on the other hand, are restricted to WEBM and MP4 of up to 10 megabytes(10737418240 bytes) and 6 minutes time limitation per video.
