--- a/src/app/views/channel/list/list.component.html
+++ b/src/app/views/channel/list/list.component.html
@@ -2,7 +2,7 @@
 <div class="list-middle">
 	<div class="list-list" *ngFor="let content of contents">
 		<div class="list-each">
-			<view-post id="{{ 'post-' + content.orderId }}" [content]="content"></view-post>
+			<component-post id="{{ 'post-' + content.orderId }}" [channel]="channel" [content]="content"></component-post>
 		</div>
 	</div>
 	<!-- <div style="display: flex; width: 100%; flex-direction: column;" *ngIf="nothingToShow">
