--- a/src/app/views/about/about.component.html
+++ b/src/app/views/about/about.component.html
@@ -20,13 +20,16 @@
                 <p>                
                     For example, a Mod Persona of a channel is able to ban another Persona and its user account, so no other Persona from that account will be able to post,
                     but the Mod Persona cannot see the account owner of the banned Persona or its other Personas. This ensures strict anonymity with everyone, including from staff members.
-                </p>                
+                </p>                                            
+            </span>   
+
+            <span style="display: block; margin: 15px 0px 15px 0px;">              
                 <p>                
                     <span class="about-title-pixi">Pixi</span>'s most important value is <span style="font-weight:bold;">Freedom of Speech</span>. However, to ensure the wellbeing of
                     the whole community and harmony between users, we shall enforce a short but strict list of rules, known as the 
                     <span style="font-weight:bold;">Global Rules</span>.
                 </p>                               
-            </span>   
+            </span>              
 
             <span style="display: block; text-align: left; margin: 15px 50px 15px 50px;">
                 <span style="font-weight:bold; display: block; margin-bottom: 5px;">Global Rules</span>
@@ -51,29 +54,35 @@
                 </ol>
             </span>      
             
-            <span style="display: block; text-align: left; margin: 15px 0px 15px 0px;">
+            <span style="display: block; text-align: left; margin: 8px 0px 15px 0px;">
                 <p>
                     Global Rules apply to all channels. Violation of some of these rules may result in a permanent
                     ban for the user or Persona, and/or content deletion.
                 </p>
             </span> 
 
-            <span style="display: block; text-align: left; margin: 15px 0px 15px 0px;">
-                <span style="display: block; font-weight:bold; margin-bottom: 5px;">Some Technical Policies</span>
+            <span style="display: block; text-align: left; margin: 8px 0px 0px 0px;">
+                <span style="display: block; font-weight:bold; margin-bottom: 8px;">Some Technical Policies</span>
                 <p>                
                     <span class="about-title-pixi">Pixi</span> allows for images and videos uploads with certain limitations. Images are restricted to PNG, JPG, BMP and GIF of up to
                     10 megabytes(10737418240 bytes) per image. Videos, on the other hand, are restricted to WEBM and MP4 of up to 10 megabytes(10737418240 bytes) and 6 minutes time limitation per video.
                     A post is limited to 10 images or 5 videos. A post may consist of images and videos, where a video is equivalent to 2 images. This means a post may consist 2 videos and 6 images, or
                     4 videos and 2 images, and so on.
                 </p>
+            </span>             
+
+            <span style="display: block; text-align: left; margin: 8px 0px 0px 0px;">
                 <p>
                     Channels may be setup so only a specific type of content is allowed. For example, a channel may have audio disabled on its videos. A video uploaded to this kind of 
                     channel will be stripped off of its audio completely. Another example would be a channel where only images are allowed to be uploaded.
                 </p>
+            </span> 
+
+            <span style="display: block; text-align: left; margin: 8px 0px 15px 0px;">
                 <p>
                     Any video or image uploaded will automatically be completely stripped off of its metadata to protect user's anonymity.
                 </p>
-            </span>             
+            </span> 
 
         </span>
     </span>
