--- a/src/app/topbar/topbar.component.scss
+++ b/src/app/topbar/topbar.component.scss
@@ -62,3 +62,113 @@
 	display: inline-block;
 	flex: 1;
 }
+
+.dd-icon {
+	// font-size: 1.0em;
+	line-height: 16px;
+	height: 16px;
+	display: block;
+}
+
+.fm-base {
+	display: block;
+	// min-width: 400px;
+	min-height: 200px;	
+}
+
+.fm-order-base {
+	display: block;
+	margin-top: 16px;
+	margin-left: 35px;
+	margin-right: 35px;
+	margin-bottom: 8px;
+}
+
+.fm-order {
+	display: flex;
+	flex-direction: column;
+}
+
+.fm-order-opt {
+	display: block;
+	margin-top: 8px;
+}
+
+.fm-sep {
+	display: block;
+	width: 100%;
+	border-top: 1px solid lighten($pixi-base-color, 85.0);
+}
+
+.fm-sort-base {
+	display: block;
+	margin-top: 8px;
+	margin-left: 35px;
+	margin-right: 35px;
+	margin-bottom: 16px;
+}
+
+.fm-sort {
+	display: flex;
+	flex-direction: column;
+}
+
+.fm-sort-opt {
+	display: block;
+	margin-top: 8px;
+}
+
+.sm-base {
+	display: block;
+	min-width: 400px;
+	min-height: 100px;
+	overflow: hidden;	
+}
+
+.sm-range {
+	display: flex;
+	flex-direction: column;
+}
+
+.sm-range-opt {
+	display: block;
+	margin-top: 8px;
+}
+
+.sm-range-base {
+	display: block;
+	margin-top: 8px;
+	margin-left: 35px;
+	margin-right: 35px;
+	margin-bottom: 16px;
+}
+
+.sm-searchbar-base {
+	display: flex;
+	flex-direction: row;
+	line-height: 36px;
+	height: 36px;
+	margin-top: 8px;
+	margin-left: 35px;
+	margin-right: 35px;
+	margin-bottom: 32px;
+}
+
+.sm-searchbard-field {
+	display: block;
+	flex: 1;
+	margin-top: auto;
+	margin-bottom: auto;
+	margin-right: 8px;	
+}
+
+.sm-button {
+	width: 42px;
+	height: 36px;
+	margin-top: 8px;
+	display: block;
+}
+
+::ng-deep .mat-menu-panel {
+	max-width: none !important;
+}
